Updates code changes bug fixes